...
                android:layout_height="wrap_content"
                android:text="second"/>

        </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewPager"
            android:layout_marginTop="10dp"
            android:layout_below="@id/tab_layout"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="8dp"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content">
...
